// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input /> should render snapshot input dark 1`] = `
<input
  className="rounded w-full h-10 my-1.5 text-indent bg-black border border-button indent-1"
  name=""
  onChange={[Function]}
  placeholder=""
  required={false}
  type="text"
  value=""
/>
`;

exports[`<Input /> should render snapshot input light 1`] = `
<input
  className="rounded w-full h-10 my-1.5 text-black indent-1"
  name=""
  onChange={[Function]}
  placeholder=""
  required={false}
  type="text"
  value=""
/>
`;
